2010-02-12  Raúl Mateos <raulofpandora@gmail.com>

	* include/config_process.php: Fix date. Updated build.

	* Changelog: Small fixes.

2010-02-10  Sancho Lerena <slerena@artica.es>

	* include/help/es/help_alert_macros.php: Updated macro help.

	* include/config_process.php: Updated build. Better log management.

	* include/functions_fsgraph.php: removed a few blank lines.

	* godmode/setup/file_manager.php: Added support to delete files.

	* godmode/db/db_main.php: Added new metrics about DB usage. Added
	last time pandora_db.pl was running in the system.

	* godmode/db/db_info.php: Added graphic from db_main.

2010-02-01  Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/estado_agente.php: Changed colour order for 
	module status.

	* include/help/en/help_agent_status.php: Improved help.

	* Changelog: Fix date.

2010-02-01  Sancho Lerena <slerena@artica.es>

	* include/javascript/pandora_visual_console.js: Thiner lines in maps.

	* include/functions_visual_map.php: Fixed several issues in visual maps
	(bad hierarchy status color, limited depth for recursion, get unknown
	for agents and modules, and line color is now always associated to
	parent status) and non-status elements like labels, graphs or progress
	bars now doesnt propagate module status to parents.

	* include/functions_db.php: Added parameter to get_db_all_rows_sql() to
	avoid use of cache. Function process_sql() was not properly checking if
	cache usage was disabled and was always using cache. Added support for
	checking unknown status in get_agentmodule_status() function.

	* extensions/dbmanager/dbmanager.css,
	  extensions/dbmanager.php: Fixed width of textarea.

	* operation/events/events.php: Fixed bug #2943907.

	* operation/agentes/exportdata.php: Fixed problem exporting CSV
	when data to export is TOO big, using an internal cache to read 
	data.

2010-01-29 Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	